{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerOne",
            "id": "a00a9e32-5602-439d-bdc6-1dc090d7e735",
            "actions": [
                {
                    "name": "SwordHitUp",
                    "type": "Button",
                    "id": "68d034c6-6741-4cda-aae5-0c95b8a113f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitDown",
                    "type": "Button",
                    "id": "062c7c01-2b5d-48b7-bbff-a35ff9910658",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitRight",
                    "type": "Button",
                    "id": "e12f4759-03c6-4a3f-a479-d4e1810892dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitLeft",
                    "type": "Button",
                    "id": "ef6ac9fe-311c-4bd9-a0dc-3034eee3462a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitUpRight",
                    "type": "PassThrough",
                    "id": "501b16f2-5009-4439-a419-4a5a207998cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitDownRight",
                    "type": "Button",
                    "id": "3cd2c69b-386c-4c7f-a4c2-146f8185ed3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitDownLeft",
                    "type": "Button",
                    "id": "d810f6ed-214b-4727-9d77-79e1498a1f7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitUpLeft",
                    "type": "Button",
                    "id": "9dfe2b30-eec6-4cef-8dfc-1854c3cbd716",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitForward",
                    "type": "Button",
                    "id": "afc09fc7-ab7c-4b15-ae3a-60b5eea641c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "de0c58b8-05c3-48a7-9738-a5945d4a0ecf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f5a0e73-1fd2-434d-bb29-51c915f82cee",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a963c41-a7cf-4271-927f-70f3d179c5ae",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d7079a0-79c6-4597-9602-e0f1b5034215",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "13516f30-1234-4fce-8d06-d14279cc65b4",
                    "path": "OneModifier",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "411c46c3-fc2a-4086-be13-f280e63c3f8b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "89b1da3b-1fc4-4bd8-847f-9faee3296605",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "2403169b-8e58-4981-8cb2-8f310561740e",
                    "path": "OneModifier",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "e91f4165-8aba-453a-a087-39acd3ba29e2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "3e066eae-9f7e-43f7-abc3-ea7d1dfed6e6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "91b76e3b-5d43-42a8-9cad-f931bc796468",
                    "path": "OneModifier",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "d5f60043-0fed-497c-8653-7a7eabed2a0d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "855d5a84-c3d6-44c9-95e0-3b7157a30273",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "f2f1c7cb-6357-4136-9c57-f0cbd4642ef3",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "32e06883-3ee3-4c70-9b09-868c4afa2180",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e95fdcb5-e67e-41c9-b217-d5906f86dabd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "33bad233-e351-43ba-9bc8-283dd4c75ac9",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerTwo",
            "id": "9e3c53e1-e6e4-4831-acbc-60b9e0bdb873",
            "actions": [
                {
                    "name": "SwordHitUp",
                    "type": "Button",
                    "id": "7d26aed9-6f71-495f-a6c1-5e6eb8fb6369",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitDown",
                    "type": "Button",
                    "id": "94bd994b-4761-4087-a5f7-4a2bbec01e1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitRight",
                    "type": "Button",
                    "id": "66ad217c-2e29-4bfc-8cf5-0d8559013b35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitLeft",
                    "type": "Button",
                    "id": "8db0653e-4e85-4a1d-9e9a-84b0a1b8b831",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitUpRight",
                    "type": "PassThrough",
                    "id": "9a877513-f29b-4ae3-aa8d-bd67512cae0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitDownRight",
                    "type": "Button",
                    "id": "cf4b77b7-4ac4-4ef1-8ce6-9853d196da09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitDownLeft",
                    "type": "Button",
                    "id": "385d680c-5d11-41ba-876b-c2c17bc429f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitUpLeft",
                    "type": "Button",
                    "id": "581b25b9-3c6a-494a-a812-12c0d2ee7507",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwordHitForward",
                    "type": "Button",
                    "id": "f1512dd5-5eec-4a4e-bbb6-707e146ea2d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bc3e0988-8e59-4827-8d70-feb0fd32c446",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "451cf494-12fa-41c5-9e61-8e9771c98664",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9afebb1-4453-41a1-9f76-046e26b54480",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6a29a07-9e60-40c9-ae72-c53b2f2af428",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "793da9af-1ebe-408a-b1e8-5291928ba678",
                    "path": "OneModifier",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "3a4106ff-c658-46a8-add6-cbe000d6fe78",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e46e4f8b-7e2a-4425-a6fc-80ba2a98f587",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "239683bb-d0e3-4aeb-86cf-e4fd6626df18",
                    "path": "OneModifier",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "8c4b96cc-ce6c-4089-89f1-062def79a76a",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "b5fdc7ab-f662-4cec-8956-789f211f60b1",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "045c1b32-40ba-4a6d-a0f1-d88a49d18a65",
                    "path": "OneModifier",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "b631ab69-c331-4b4c-b208-6dabb07f0506",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "216c01ee-b8ac-45da-aff9-705f78e1ba8c",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitDownLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "d26d06d3-b3a4-47de-8c48-a446207378c6",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "e9310998-9a5d-47ba-8eb8-42242d32488e",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "c7d03ed3-810a-4b1f-b3db-0607cbf655ec",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitUpLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0da49af2-2b4b-4872-84ff-6f4ed564c66d",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordHitForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}